src/styles.css
:root {
  --primary-color: #54247a;
}

body {
  background-color: #f3edf9;
  color: var(--primary-color);
  font-family: "Poppins", sans-serif;
  padding-top: 25px;
}

.card {
  background-color: white;
  border-radius: 4px;
  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
  margin: 0 auto;
  max-width: 640px;
  padding: 40px;
}

h1 {
  font-size: 40px;
  letter-spacing: 2px;
  text-align: center;
  text-transform: uppercase;
}

h3 {
  font-size: 24px;
  margin: 0;
}

h4 {
  font-size: 38px;
  line-height: 1;
  margin: 0;
}

h6 {
  color: rgba(84, 36, 122, 0.7);
  margin: 0 0 25px;
}

footer {
  color: var(--primary-color);
  display: block;
  margin-top: 50px;
  text-align: center;
}

footer a,
footer a:visited {
  color: var(--primary-color);
  text-decoration: none;
  transition: all 150ms ease-in-out;
}

footer a:hover {
  color: #ab6dde;
  cursor: pointer;
  text-decoration: underline;
}

select {
  background-color: #f3edf9;
  border: 2px solid #ab6dde;
  border-radius: 8px;
  color: var(--primary-color);
  display: block;
  font-size: 16px;
  margin: 25px auto;
  padding: 5px 10px;
  text-align: center;
}

.none {
  display: none;
}

.appear {
  display: block;
}

.default-cities {
  padding: 25px;
}

.default-city {
  border-bottom: 1px dashed lightgray;
  display: flex;
  justify-content: space-between;
  margin-bottom: 25px;
}

.default-city:last-child {
  border-bottom: none;
  margin-bottom: 0;
}

@media (max-width: 960px) {
  body {
    padding: 12px;
  }

  .card {
    padding: 15px;
  }

  h1 {
    font-size: 32px;
  }

  h3 {
    font-size: 18px;
  }

  h4 {
    font-size: 24px;
    line-height: 36px;
  }

  select {
    font-size: 14px;
  }
}

